--- a/app/launchpage.html
+++ b/app/launchpage.html
@@ -41,8 +41,15 @@
                         applicationType: 'URL',
                         url: "./supplymanagement/webapp",
                         navigationMode: 'embedded',
-                        
-                    }
+                    },
+                    "request-management": {
+                        title: 'Request Management',
+                        description: 'Requests',
+                        additionalInformation: 'SAPUI5.Component=com.yauheni.sapryn.requestforsupplymanagement',
+                        applicationType: 'URL',
+                        url: "./requestmanagement/webapp",
+                        navigationMode: 'embedded',
+                    },
             }
         }
         </script>
